--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2018"
 [dependencies]
 serde_json="1.0.68"
 serde = { version = "1.0.130", features = ["derive"] }
+
+tokio = { version = "1", features = ["full"] }
+
+actix = "0.10"
+actix-web = "3"
+actix-web-actors = "3"
