--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,10 @@ actix = "0.10"
 actix-web = "3"
 actix-web-actors = "3"
 
+
+ws = "0.9.1"
+chrono = "0.4.19"
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
+local_ipaddress = "0.1.3"
 redis = "0.21.4"
